# tradebrain

./: .env.example  .gitignore  NEXT_STEPS.md  PROJECT_CONTEXT.md  README.md  pyproject.toml  test_engine.py
config/: sectors.json  universe.json  watchlist.json
src/bot/: bs.py  chain_yf.py  cli.py  config.py  correlations.py  engine.py  intake.py  logger.py  macro_calendar.py  market_regime.py  models.py  research.py  select.py  technicals.py  ticker_discovery.py
tests/: check_log.py  test_200w.py  test_engine.py  test_gemini.py  test_naaim.py  test_reclaim_debug.py
trades/: log.db
