[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradebrain"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "yfinance",
  "rich",
  "python-dotenv",
  "requests",
  "ddgs",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
tradebrain = "bot.cli:main"